tests/snapshots/app_tests__change_directory_lists_correct_directory_entires.snap
---
source: tests/app_tests.rs
expression: terminal.backend()
snapshot_kind: text
---
"                                 Tiny DC v0.1.4                                 "
"|> /tmp/tiny_dc                                                                 "
"┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓"
"┃>sub_dir/  a                                                                  ┃"
"┃ file_1.txt                                                                   ┃"
"┃ file_2.txt                                                                   ┃"
"┃                                                                              ┃"
"┃                                                                              ┃"
"┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛"
"Ctrl + (d)irectory │ (f)recent                                  Press ? for help"
