tests/snapshots/app_tests__entry_hotkey_jumps_successfully.snap
---
source: tests/app_tests.rs
expression: terminal.backend()
snapshot_kind: text
---
"                                 Tiny DC v0.1.4                                 "
"|> /tmp/tiny_dc_jump/sub_dir                                                    "
"┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓"
"┃Nothing here but digital thumbleweeds.                                        ┃"
"┃                                                                              ┃"
"┃                                                                              ┃"
"┃                                                                              ┃"
"┃                                                                              ┃"
"┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛"
"Ctrl + (d)irectory │ (f)recent                                  Press ? for help"
