tests/snapshots/app_tests__entry_hotkey_missing_when_in_search_mode_and_search_input_is_empty.snap
---
source: tests/app_tests.rs
expression: terminal.backend()
snapshot_kind: text
---
"                                 Tiny DC v0.1.4                                 "
"|> /tmp/tiny_dc_jump_search_1                                                   "
"┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓"
"┃>sub_dir/                                                                     ┃"
"┃ file_1_s.txt                                                                 ┃"
"┃ file_2_s.txt                                                                 ┃"
"┃                                                                              ┃"
"┃                                                                              ┃"
"┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛"
" /                                                                              "
